Fixed gap

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
   }
   & > nav {
     display: flex;
-    gap: 40px;
+    gap: 25px;
     & > #close {
       display: none;
     }
